# enterprise-data-architecture-tools

./: .gitignore  README.md  eda_master_dashboard.py  eda_master_launcher.py  pyproject.toml
sample_data/: audit_reporting_log.csv  business_process_mapper.csv  capabilities.txt  capability_gap_matrix.csv  capability_heatmap.csv  capability_matrix.csv  capability_maturity.csv  communications_plan.csv  data_entity_catalogue.csv  data_flow.csv  data_flows.csv  data_quality_gap_analysis.csv  data_steward_activity.csv  dependency_tracker.csv  execution_roadmap_planner.csv  future_capability_matrix.csv  gap_analysis_matrix.csv  governance_compliance_dashboard.csv  incident_log.csv  initiative_prioritization_matrix.csv  inventory.csv  kpi_baseline_tracker.csv  kpi_monitoring_dashboard.csv  migration_plan.csv  onboarding_plan.csv  principles.csv  resourcing_plan.csv  risk_register.csv  system_inventory.csv  system_inventory_tracker.csv  systems.txt  target_architecture.csv  target_architecture_blueprint.csv  tech_fit_gap.csv  tech_landscape.csv  technical_debt.csv  technology_fit_gap_matrix.csv  technology_landscape.csv  technology_landscape_matrix.csv  workstream_tracker.csv
tools/capability_heatmap/: README.md  app.py  example_capabilities.txt  example_matrix.csv  example_systems.txt
tools/capability_maturity_model/: app.py
tools/data_flow_mapper/: README.md  app.py  requirements.txt
tools/high_level_migration_plan/: app.py
tools/stage1_define_current_state/: business_process_mapper.py  capability_heatmap.py  data_entity_catalogue.py  system_inventory_tracker.py  (+1 more)
(+36 files in other folders)
