[tool.poetry]
name = "eda-toolkit"
version = "0.1.0"
description = "Enterprise Data Architecture Toolkit"
authors = ["Vishant Bhat <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "tools" }]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.30"
pandas = "^2.2"
matplotlib = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"